--- a/public/locales/pl/translation.json
+++ b/public/locales/pl/translation.json
@@ -29,7 +29,7 @@
     "educationTranslations": {
         "iths": {
             "institutionName": "IT Uniwersytet",
-            "program": "Frontend Developer, 2 lata"
+            "program": "Frontend Deweloper, 2 lata"
         },
         "dsv": {
             "institutionName": "Uniwersytet w Sztokholmie / DSV",
